--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 aiohttp==3.6.3
 astroid==2.4.2
 async-timeout==3.0.1
+asyncpg==0.21.0
 attrs==20.3.0
 cachetools==4.1.1
 certifi==2020.11.8
 chardet==3.0.4
 colorama==0.4.4
+discord==1.0.1
 discord.py==1.5.1
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
@@ -35,6 +37,7 @@ PyTweening==1.0.3
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
+schedule==0.6.0
 scipy==1.5.4
 six==1.15.0
 threadpoolctl==2.1.0
